[package]
name = "anydns_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
rustls = { version = "0.21.0", default-features = false, features = ["tls12"] }
tokio = { version = "1.0", features = ["io-std", "macros", "net", "rt-multi-thread"] }
rustls-pemfile = "1.0.0"
hyper-rustls = "0.24.2"
instant-acme = "0.4.1"
tracing-subscriber = "0.3.18"
rcgen = "0.11.3"
tracing = "0.1.40"
serde_json = "1.0.108"
anyhow = "1.0.75"
hyper-util = { version = "0.1.1", features = ["full"] }
http-body-util = "0.1.0"
http-body = "1.0.0"
get_if_addrs = "0.5.3"
clap = { version = "4.4.11", features = ["derive"] }
